--- a/layouts/partials/components/footer.html
+++ b/layouts/partials/components/footer.html
@@ -7,54 +7,23 @@
             <h3 class="title-4 xs-mr-30 lh-1">Subscribe to Our Newsletter</h3>
             <div class="section-form section-form-footer">
               <div class="section-form-inner">
-              <!-- Begin Mailchimp Signup Form -->
-                <div id="mc_embed_signup">
-                  <form action="https://section.us19.list-manage.com/subscribe/post-json?u=a52bc1065d452c0b915716c32&amp;id=9ac38a3a06&c=?" method="get" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll">
-                      <div class="mc-field-group">
-                        <input type="email" value="" aria-label="Input your email" name="EMAIL" placeholder="Enter your email..." class="required email" id="mce-EMAIL">
-                      </div>
-                      <div id="mce-responses" class="clear">
-                        <div class="response" id="mce-error-response" style="display:none"></div>
-                        <div class="response" id="mce-success-response" style="display:none"></div>
-                      </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_a52bc1065d452c0b915716c32_f6d5f20409" tabindex="-1" value=""></div>
-                      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-                    </div>
-                  </form>
-                  <div class="message"></div>
-                </div>
-                <!--End mc_embed_signup-->
+              <!-- Begin HubSpot Signup Form -->
+              <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+              <script>
+                hbspt.forms.create({
+                  region: "na1",
+                  portalId: "20967395",
+                  formId: "38690c72-f109-4984-9ab2-450a19482a74"
+                });
+              </script>
+                <!--End HS newsletter signup-->
               </div>
             </div>
           </div>
         </div>
       </div>
     {{ else }}
-      <div class="section-footer-top flex">
-          <div class="section-footer-top-inner prl-5 flex">
-            <div class="section-footer-top-inner-item flex relative">
-              <h3 class="title-4 xs-mr-30 lh-1">Join our Slack community</h3>
-              <a href="https://sectionio-community.slack.com/" target="_blank" class="section-footer-top-inner-item-slack fill-white flex justify-center text-14 align-center decoration-none text-link" title="(new window)"><span class="section-footer-top-inner-item-slack-icon">Add to&nbsp;<span class="text-14-medium text-link">Slack</span></span></a>
-              <div class="section-footer-top-inner-item-svg absolute">
-                <svg width="160" height="99" aria-label="Slack logo" xmlns="http://www.w3.org/2000/svg">
-                  <g fill-rule="nonzero" fill="none">
-                    <g fill="#E01E5A">
-                      <path d="M34.268 100.787c0 9.197-7.433 16.63-16.63 16.63s-16.63-7.433-16.63-16.63c0-9.196 7.433-16.63 16.63-16.63h16.63v16.63zM42.583 100.787c0-9.196 7.433-16.63 16.63-16.63 9.196 0 16.63 7.434 16.63 16.63v41.575c0 9.197-7.434 16.63-16.63 16.63-9.197 0-16.63-7.433-16.63-16.63v-41.575z"/>
-                    </g>
-                    <g fill="#36C5F0">
-                      <path d="M59.213 34.016c-9.197 0-16.63-7.433-16.63-16.63S50.016.756 59.213.756c9.196 0 16.63 7.433 16.63 16.63v16.63h-16.63zM59.213 42.457c9.196 0 16.63 7.433 16.63 16.63 0 9.196-7.434 16.63-16.63 16.63H17.512c-9.197 0-16.63-7.434-16.63-16.63 0-9.197 7.433-16.63 16.63-16.63h41.7z"/>
-                    </g>
-                    <g fill="#2EB67D">
-                      <path d="M125.858 59.087c0-9.197 7.433-16.63 16.63-16.63s16.63 7.433 16.63 16.63c0 9.196-7.433 16.63-16.63 16.63h-16.63v-16.63zM117.543 59.087c0 9.196-7.433 16.63-16.63 16.63-9.196 0-16.63-7.434-16.63-16.63V17.386c0-9.197 7.434-16.63 16.63-16.63 9.197 0 16.63 7.433 16.63 16.63v41.7z"/>
-                    </g>
-                    <path d="M100.913 117.417c-9.196 0-16.63-7.433-16.63-16.63 0-9.196 7.434-16.63 16.63-16.63h41.701c9.197 0 16.63 7.434 16.63 16.63 0 9.197-7.433 16.63-16.63 16.63h-41.7z" fill="#ECB22E"/>
-                  </g>
-                </svg>
-              </div>
-            </div>
-          </div>
-        </div>
+
     {{ end }}
 
     <div class="section-footer-inner flex flex-wrap prl-5">
@@ -62,7 +31,7 @@
         <h4 class="title-6 text-link xs-mb-20">Company</h4>
         <ul class="list-unstyled">
           <li class="xs-mb-20"><a href="/about/" class="text-16 link-footer decoration-none">About</a></li>
-          <li class="xs-mb-20"><a href="/about/careers/" class="text-16 link-footer decoration-none">Careers</a><span class="text-11" style="background-color: #00a86b; color: white; margin-left: 10px; padding: 3px; font-weight: 600;">WE'RE HIRING</span></li>
+          <li class="xs-mb-20"><a href="/about/careers/" class="text-16 link-footer decoration-none">Careers</a></li>
           <li class="xs-mb-20"><a href="/legal-stuff/" class="text-16 link-footer decoration-none">Legals</a></li>
         </ul>
       </div>
@@ -71,10 +40,8 @@
         <h4 class="title-6 text-link xs-mb-20">Resources</h4>
         <ul class="list-unstyled">
           <li class="xs-mb-20"><a href="/blog/" class="text-16 link-footer decoration-none">Blog</a></li>
-          <li class="xs-mb-20"><a href="/edge-compute-content-resources/" class="text-16 link-footer decoration-none">Edge Content Library</a></li>
-          <li class="xs-mb-20"><a href="/solution-briefs/" class="text-16 link-footer decoration-none">Solution Briefs</a></li>
+          <li class="xs-mb-20"><a href="/edge-compute-content-resources/" class="text-16 link-footer decoration-none">Content Library</a></li>
           <li class="xs-mb-20"><a href="/engineering-education/" class="text-16 link-footer decoration-none">Engineering Education</a></li>
-          <li class="xs-mb-20"><a href="/pricing/" class="text-16 link-footer decoration-none">Pricing</a></li>
         </ul>
       </div>
 
