--- a/layouts/partials/engineering-education/articles-header.html
+++ b/layouts/partials/engineering-education/articles-header.html
@@ -27,7 +27,7 @@
       <div class="hero-color-middle flex align-center justify-center relative">
         <div class="hero-color-middle-left-stripes"></div>
         <div class="prl-5">
-          <h1 class="title-2 text-white xs-pb-10"><a href="https://section.io/">Deploy Apps Close to Your Users with Section</h1>
+          <h1 class="title-2 text-white xs-pb-10">Deploy Apps Close to Your Users with Section</h1>
           <p class="text-16 text-white" style="text-align: left;">
           <span class="justify-center">Section's Engineering Education (EngEd) Program is supported by Section. <br></br>
           Section's platform means you can launch containers as close as possible to your users in minutes.
