--- a/layouts/partials/engineering-education/articles-header.html
+++ b/layouts/partials/engineering-education/articles-header.html
@@ -29,8 +29,8 @@
         <div class="prl-5">
           <h1 class="title-2 text-white xs-pb-10">Deploy Apps Close to Your Users with Section</h1>
           <p class="text-16 text-white" style="text-align: left;">
-          <span class="justify-center">Section's Engineering Education (EngEd) Program is supported by Section. <br></br>
-          Section's platform means you can launch containers as close as possible to your users in minutes.
+          <span class="justify-center">This Engineering Education (EngEd) Program is supported by Section. <br></br>
+          In just one minute, you can deploy apps as close as possible to your users. Affordable, simple, powerful.
           <br></br>
           Get Started for Free.</span>
           </p>
