--- a/layouts/partials/engineering-education/eng-ed-banner.html
+++ b/layouts/partials/engineering-education/eng-ed-banner.html
@@ -1,7 +1,10 @@
 <div class="engEd-banner fill-blue">
   <div class="copy">
-    <h2 class="text-white">EngEd Community</h2>
-    <p class="text-13 text-white">Section&rsquo;s Engineering Education (EngEd) Program fosters a community of university students in Computer Science related fields of study to research and share topics that are relevant to engineers in the modern technology landscape. You can find more information and program guidelines in the <a href="https://github.com/section-engineering-education/engineering-education">GitHub repository</a>. If you're currently enrolled in a Computer Science related field of study and are interested in participating in the program, please complete <a href="https://docs.google.com/forms/d/e/1FAIpQLSfTbj3kqvEJEb5RLjqJurfbHa8ckzQx0CjRzaizblue9ZOK5A/viewform?usp=sf_link">this form</a>
-    </a>.</p>
+    <h2 class="text-white">Deploy Apps Close to Your Users with Section<</h2>
+    <p class="text-16 text-white">This Engineering Education (EngEd) Program is supported by Section. 
+          <br></br>
+          In just one minute, you can deploy apps as close as possible to your users. Section is affordable, simple and powerful.
+          <br></br> 
+          <a href="https://www.section.io/">Get Started for Free</a>.</p>
   </div>
 </div>
