--- a/layouts/partials/engineering-education/articles-header.html
+++ b/layouts/partials/engineering-education/articles-header.html
@@ -32,7 +32,7 @@
           <span class="justify-center">This Engineering Education (EngEd) Program is supported by Section. <br></br>
           In just one minute, you can deploy apps as close as possible to your users. Affordable, simple, powerful.
           <br></br>
-          Get Started for Free.</span>
+        <a href="https://section.io">Get Started for Free</a>.</span>
           </p>
         </div>
         <div class="hero-color-middle-right-stripes"></div>
