--- a/layouts/partials/components/header.html
+++ b/layouts/partials/components/header.html
@@ -31,16 +31,16 @@
       <div style="position: relative;" class="section-nav-primary-uncollapsed">
         {{ if not (eq .Layout "lp-slim") }}
         <ul class="section-nav-main list-flex">
-          <li><a href="{{ .Site.BaseURL }}docs/" class="text-16 text-link decoration-none">Docs</a></li>
+          <li><a href="/docs/" class="text-16 text-link decoration-none">Docs</a></li>
           <li class="has-dropdown relative"><a class="text-16 text-link decoration-none"><span>Resources</span></a>
             <ul class="section-nav-main-dropdown list-unstyled fill-white xs-pt-10 xs-pb-5 xs-pl-10 xs-pr-30 absolute flex xs-flex-column">
               <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/blog/">Blog</a></li>
-              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/edge-compute-content-resources/">Edge Content Library</a></li>
+              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="https://section.io/edge-compute-content-resources/">Edge Content Library</a></li>
               <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/engineering-education/">Engineering Education</a></li>
               <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/about/">About Section</a></li>
             </ul>
           </li>
-          <li><a href="{{ .Site.BaseURL }}docs/about/pricing/" class="text-16 text-link decoration-none">Pricing</a></li>
+          <li><a href="/docs/about/pricing/" class="text-16 text-link decoration-none">Pricing</a></li>
         </ul>
         {{ end }}
       </div>
