--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,7 +31,8 @@
 <link rel="stylesheet" href="{{ $secureStyle.RelPermalink }}" integrity="{{ $secureStyle.Data.Integrity }}">
 
 <!-- Sajari SDK -->	
-<script src="https://unpkg.com/@sajari/sdk-js/dist.iife/index.js"></script>	
+<script src="https://unpkg.com/@sajari/sdk-js@^2/dist/sajarisdk.umd.production.min.js"></script>
+">
 <!-- End Sajari SDK -->
 
 <script>
