--- a/layouts/partials/engineering-education/articles-header.html
+++ b/layouts/partials/engineering-education/articles-header.html
@@ -27,10 +27,10 @@
       <div class="hero-color-middle flex align-center justify-center relative">
         <div class="hero-color-middle-left-stripes"></div>
         <div class="prl-5">
-          <h1 class="title-2 text-white xs-pb-10">Deploy Apps Close to Your Users with Section</h1>
+          <h1 class="title-2 text-white xs-pb-10">Deploy Containers Close to Your Users</h1>
           <p class="text-16 text-white" style="text-align: left;">
           <span class="justify-center">This Engineering Education (EngEd) Program is supported by Section. <br></br>
-          In just one minute, you can deploy apps as close as possible to your users. Affordable, simple, powerful.
+          Instantly deploy containers globally. Section is Affordable, simple, powerful.
           <br></br>
         <a href="https://section.io">Get Started for Free</a>.</span>
           </p>
