--- a/layouts/partials/engineering-education/eng-ed-banner.html
+++ b/layouts/partials/engineering-education/eng-ed-banner.html
@@ -1,9 +1,9 @@
 <div class="engEd-banner fill-blue">
   <div class="copy">
-    <h2 class="text-white">Deploy Apps Close to Your Users with Section</h2>
+    <h2 class="text-white">Deploy Containers Close to Your Users</h2>
     <p class="text-16 text-white">This Engineering Education (EngEd) Program is supported by Section. 
           <br></br>
-          In just one minute, you can deploy apps as close as possible to your users. Section is affordable, simple and powerful.
+          Instantly deploy containers globally. Section is affordable, simple and powerful.
           <br></br> 
           <a href="https://www.section.io/">Get Started for Free</a>.</p>
   </div>
