--- a/layouts/partials/components/header.html
+++ b/layouts/partials/components/header.html
@@ -40,7 +40,7 @@
               <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/about/">About</a></li>
             </ul>
           </li>
-          <li><a href="{{ .Site.BaseURL }}pricing/" class="text-16 text-link decoration-none">Pricing</a></li>
+          <li><a href="https://section.io/pricing/" class="text-16 text-link decoration-none">Pricing</a></li>
         </ul>
         {{ end }}
       </div>
@@ -114,7 +114,7 @@
         <li class="xs-mb-20">
           <a href="https://www.section.io/docs/" class="text-white decoration-none xs-pb-20 title-4-menu"><span>Docs</span></a>
         </li>
-        <li class="xs-mb-20"><a href="/pricing/" class="text-white decoration-none title-4-menu xs-pb-20"><span>Pricing</span></a></li>
+        <li class="xs-mb-20"><a href="https://section.io/pricing/" class="text-white decoration-none title-4-menu xs-pb-20"><span>Pricing</span></a></li>
       </ul>
     </div>
   </div>
