--- a/layouts/partials/components/header.html
+++ b/layouts/partials/components/header.html
@@ -31,7 +31,7 @@
       <div style="position: relative;" class="section-nav-primary-uncollapsed">
         {{ if not (eq .Layout "lp-slim") }}
         <ul class="section-nav-main list-flex">
-          <li><a href="{{ .Site.BaseURL }}docs/" class="text-16 text-link decoration-none">Docs</a></li>
+          <li><a href="https://www.section.io/docs/" class="text-16 text-link decoration-none">Docs</a></li>
           <li class="has-dropdown relative"><a class="text-16 text-link decoration-none"><span>Resources</span></a>
             <ul class="section-nav-main-dropdown list-unstyled fill-white xs-pt-10 xs-pb-5 absolute flex xs-flex-column">
               <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/blog/">Blog</a></li>
