--- a/layouts/partials/components/header.html
+++ b/layouts/partials/components/header.html
@@ -104,17 +104,17 @@
             </div>
           </div>
           <ul class="section-nav-mobile-drop list-unstyled fill-white xs-pt-20 xs-pb-10 xs-mt-10">
-            <li class="xs-mb-10"><a class="text-20-regular text-color decoration-none" href="/blog/">Blog</a></li>
-            <li class="xs-mb-10"><a class="text-20-regular text-color decoration-none" href="/edge-compute-content-resources/">Content Library</a></li>
-            <li class="xs-mb-10"><a class="text-20-regular text-color decoration-none" href="/engineering-education/">Engineering Education</a></li>
-            <li class="xs-mb-10"><a class="text-20-regular text-color decoration-none" href="/about/">About Section</a></li>
+            <li class="xs-mb-10"><a class="text-20-regular text-color decoration-none" href="/blog/?utm_source=enged&utm_campaign=article&utm_medium=organic">Blog</a></li>
+            <li class="xs-mb-10"><a class="text-20-regular text-color decoration-none" href="/edge-compute-content-resources/?utm_source=enged&utm_campaign=article&utm_medium=organic">Content Library</a></li>
+            <li class="xs-mb-10"><a class="text-20-regular text-color decoration-none" href="/engineering-education/?utm_source=enged&utm_campaign=article&utm_medium=organic">Engineering Education</a></li>
+            <li class="xs-mb-10"><a class="text-20-regular text-color decoration-none" href="/about/?utm_source=enged&utm_campaign=article&utm_medium=organic">About Section</a></li>
           </ul>
         </li>
 
         <li class="xs-mb-20">
           <a href="https://www.section.io/docs/" class="text-white decoration-none xs-pb-20 title-4-menu"><span>Docs</span></a>
         </li>
-        <li class="xs-mb-20"><a href="https://section.io/pricing/" class="text-white decoration-none title-4-menu xs-pb-20"><span>Pricing</span></a></li>
+        <li class="xs-mb-20"><a href="https://section.io/pricing/?utm_source=enged&utm_campaign=article&utm_medium=organic" class="text-white decoration-none title-4-menu xs-pb-20"><span>Pricing</span></a></li>
       </ul>
     </div>
   </div>
