--- a/layouts/partials/engineering-education/articles-header.html
+++ b/layouts/partials/engineering-education/articles-header.html
@@ -32,7 +32,7 @@
           <span class="justify-center">This Engineering Education (EngEd) Program is supported by Section. <br></br>
           Instantly deploy containers globally. Section is Affordable, simple, powerful.
           <br></br>
-        <a href="https://section.io">Get Started for Free</a>.</span>
+        <a href="https://www.section.io?utm_source=enged&utm_campaign=article&utm_medium=organic">Get Started for Free</a>.</span>
           </p>
         </div>
         <div class="hero-color-middle-right-stripes"></div>
