--- a/layouts/partials/components/header.html
+++ b/layouts/partials/components/header.html
@@ -34,13 +34,13 @@
           <li><a href="https://www.section.io/docs/" class="text-16 text-link decoration-none">Docs</a></li>
           <li class="has-dropdown relative"><a class="text-16 text-link decoration-none"><span>Resources</span></a>
             <ul class="section-nav-main-dropdown list-unstyled fill-white xs-pt-10 xs-pb-5 absolute flex xs-flex-column">
-              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/blog/">Blog</a></li>
-              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/edge-compute-content-resources/">Content Library</a></li>
-              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/engineering-education/">Engineering Education</a></li>
-              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/about/">About</a></li>
+              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/blog/?utm_source=enged&utm_campaign=article&utm_medium=organic">Blog</a></li>
+              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/edge-compute-content-resources/?utm_source=enged&utm_campaign=article&utm_medium=organic">Content Library</a></li>
+              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/engineering-education/?utm_source=enged&utm_campaign=article&utm_medium=organic">Engineering Education</a></li>
+              <li class="xs-mb-10"><a class="decoration-none text-15 text-color" href="/about/?utm_source=enged&utm_campaign=article&utm_medium=organic">About</a></li>
             </ul>
           </li>
-          <li><a href="https://section.io/pricing/" class="text-16 text-link decoration-none">Pricing</a></li>
+          <li><a href="https://www.section.io/pricing/?utm_source=enged&utm_campaign=article&utm_medium=organic" class="text-16 text-link decoration-none">Pricing</a></li>
         </ul>
         {{ end }}
       </div>
