--- a/layouts/partials/engineering-education/eng-ed-banner.html
+++ b/layouts/partials/engineering-education/eng-ed-banner.html
@@ -5,6 +5,6 @@
           <br></br>
           Instantly deploy containers globally. Section is affordable, simple and powerful.
           <br></br> 
-          <a href="https://www.section.io/">Get Started for Free</a>.</p>
+          <a href="https://www.section.io/?utm_source=enged&utm_campaign=article&utm_medium=organic">Get Started for Free</a>.</p>
   </div>
 </div>
