Update EngEd banner messaging and style

--- a/layouts/partials/engineering-education/eng-ed-banner.html
+++ b/layouts/partials/engineering-education/eng-ed-banner.html
@@ -1,10 +1,9 @@
-<div class="engEd-banner fill-blue">
+<div class="engEd-banner fill-dark">
   <div class="copy">
-    <h2 class="text-white">Deploy Containers Close to Your Users</h2>
-    <p class="text-16 text-white">This Engineering Education (EngEd) Program is supported by Section. 
-          <br></br>
-          Instantly deploy containers globally. Section is affordable, simple and powerful.
-          <br></br> 
-          <a href="https://www.section.io/?utm_source=enged&utm_campaign=article&utm_medium=organic">Get Started for Free</a>.</p>
+    <h2 class="text-white">Deploy containers globally in a few clicks</h2>
+    <p class="text-16 text-white">This Engineering Education (EngEd) Program is supported by Section. Instantly deploy containers across multiple cloud providers all around the globe.</p>
+    <p class="text-16">
+      <a href="https://www.section.io/?utm_source=enged&utm_campaign=article&utm_medium=organic">Try It For Free</a>
+    </p>
   </div>
 </div>
