--- a/assets/scss/components/_engineering-education.scss
+++ b/assets/scss/components/_engineering-education.scss
@@ -238,6 +238,30 @@ section.hero-blocks {
             height: 100%;
           }
         }
+
+        .author-cta {
+          padding: 24px;
+          margin: 1.5rem -2rem 0;
+
+          p {
+            line-height: $line-height-3;
+            font-weight: bold;
+
+            &:last-of-type {
+              margin-top: 16px;
+            }
+
+            a {
+              color: $fill-dark;
+              font-weight: 500;
+              text-decoration: none;
+              line-height: 1.25;
+              background: $fill-dark-green;
+              padding: 0.375rem 1rem;
+              border-radius: 0.4rem;
+            }
+          }
+        }
       }
     }
   
