--- a/assets/scss/components/_engEd-banner.scss
+++ b/assets/scss/components/_engEd-banner.scss
@@ -24,9 +24,14 @@
         font-weight: 500;
         text-decoration: none;
         line-height: 1.25;
-        background: $fill-dark-green;
+        background: $fill-green;
         padding: 0.375rem 1rem;
         border-radius: 0.4rem;
+        transition: background 200ms cubic-bezier(0.08,0.52,0.52,1);
+
+        &:hover {
+          background: #00b976;
+        }
       }
     }
   }
