Update author sidebar style

--- a/assets/scss/components/_engineering-education.scss
+++ b/assets/scss/components/_engineering-education.scss
@@ -161,7 +161,7 @@ section.hero-blocks {
       .author-sidebar {
         background-color: #EDEDED;
         position: fixed;
-        padding: 2rem 2rem;
+        padding: 2rem 2rem 0;
         height: calc(100vh - 80px);
         display: flex;
         flex-direction: column;
