Update home page banner
Update messaging and styling for the home page banner.

--- a/layouts/partials/engineering-education/articles-header.html
+++ b/layouts/partials/engineering-education/articles-header.html
@@ -18,28 +18,15 @@
 
 <article>
   <header>
-    <section class='hero-color flex align-center justify-center fill-blue'>
-      <div class="hero-color-left relative">
-        <div class="hero-color-left-large-stripe"></div>
-        <div class="hero-color-left-small-color"></div>
-        <div class="hero-color-left-small-stripe"></div>
-      </div>
+    <section class='hero-color flex align-center justify-center fill-dark'>
       <div class="hero-color-middle flex align-center justify-center relative">
-        <div class="hero-color-middle-left-stripes"></div>
         <div class="prl-5">
-          <h1 class="title-2 text-white xs-pb-10">Deploy Containers Close to Your Users</h1>
-          <p class="text-16 text-white" style="text-align: left;">
-          <span class="justify-center">This Engineering Education (EngEd) Program is supported by Section. <br></br>
-          Instantly deploy containers globally. Section is Affordable, simple, powerful.
-          <br></br>
-        <a href="https://www.section.io?utm_source=enged&utm_campaign=article&utm_medium=organic">Get Started for Free</a>.</span>
+          <h1 class="title-2 text-white">Deploy containers globally in a few clicks</h1>
+          <p class="text-16 text-white">This Engineering Education (EngEd) Program is supported by Section. Instantly deploy containers across multiple cloud providers all around the globe.</p>
+          <p class="text-16 text-white">
+            <a href="https://www.section.io?utm_source=enged&utm_campaign=article&utm_medium=organic">Try It For Free</a>
           </p>
         </div>
-        <div class="hero-color-middle-right-stripes"></div>
-      </div>
-      <div class="hero-color-right relative">
-        <div class="hero-color-right-large-stripe"></div>
-        <div class="hero-color-right-small-color"></div>
       </div>
     </section>
   </header>
