--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -25,7 +25,7 @@
         alt="View authors profile arrow icon"
     /></a>
     <div class="author-cta fill-dark">
-      <p class="text-16 text-white">Deploy containers globally in a few clicks</p>
+      <p class="text-16 text-white">Deploy your apps to a supercloud in a few clicks</p>
       <p class="text-16">
         <a href="https://www.section.io/?utm_source=enged&utm_campaign=article&utm_medium=organic">Try It For Free</a>
       </p>
