--- a/layouts/partials/engineering-education/eng-ed-banner.html
+++ b/layouts/partials/engineering-education/eng-ed-banner.html
@@ -1,7 +1,7 @@
 <div class="engEd-banner fill-dark">
   <div class="copy">
-    <h2 class="text-white">Deploy containers globally in a few clicks</h2>
-    <p class="text-16 text-white">This Engineering Education (EngEd) Program is supported by Section. Instantly deploy containers across multiple cloud providers all around the globe.</p>
+    <h2 class="text-white">Deploy your apps to a supercloud in a few clicks</h2>
+    <p class="text-16 text-white">This Engineering Education program is supported by Section. Instantly deploy your GitHub apps, Docker containers or K8s namespaces to a supercloud.</p>
     <p class="text-16">
       <a href="https://www.section.io/?utm_source=enged&utm_campaign=article&utm_medium=organic">Try It For Free</a>
     </p>
