--- a/layouts/partials/engineering-education/articles-header.html
+++ b/layouts/partials/engineering-education/articles-header.html
@@ -21,11 +21,8 @@
     <section class='hero-color flex align-center justify-center fill-dark'>
       <div class="hero-color-middle flex align-center justify-center relative">
         <div class="prl-5">
-          <h1 class="title-2 text-white">Deploy your apps to a supercloud in a few clicks</h1>
-          <p class="text-16 text-white">This Engineering Education program is supported by Section. Instantly deploy your GitHub apps, Docker containers or K8s namespaces to a supercloud.</p>
-          <p class="text-16 text-white">
-            <a href="https://www.section.io?utm_source=enged&utm_campaign=article&utm_medium=organic">Try It For Free</a>
-          </p>
+          <h1 class="title-2 text-white">Deepen your technical knowledge</h1>
+          <p class="text-16 text-white">Learn and share the latest technology with community members in Section's Engineering Education Program.</p>
         </div>
       </div>
     </section>
